--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2021"
 actix-rt = "2.3.0"
 actix-web = "3.3.2"
 askama = "0.10.5"
+r2d2 = "0.8.9"
+r2d2_sqlite = "0.19.0"
+rusqlite = "0.26.1"
 thiserror = "1.0.30"
