--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ actix-web = "3.3.2"
 askama = "0.10.5"
 r2d2 = "0.8.9"
 r2d2_sqlite = "0.19.0"
-rusqlite = "0.26.1"
+rusqlite = { version = "0.26.1", features=["bundled"] }
 thiserror = "1.0.30"
